[package]
name = "gyroflow_adobe"
version = "0.0.1"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
name = "gyroflow_adobe"
crate-type = ["cdylib"]

[dependencies]
after-effects = { path = "../after-effects" }
after-effects-sys = { path = "../after-effects/after-effects-sys" }
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, rev = "5794a7e", features = ["bundle-lens-profiles"] }
cstr-literal = "0.1"
rfd = "0.12"
log = "0.4"
win_dbg_logger = "0.1"
log-panics = "2.1"

[build-dependencies]
pipl = { path = "../after-effects/pipl" }
